brat/test/golden/error/fanin-too-many-overs.brat.golden
Error in test/golden/error/fanin-too-many-overs.brat@FC {start = Pos {line = 2, col = 5}, end = Pos {line = 2, col = 13}}:
f = { [\/] }
    ^^^^^^^^

  Expected function to address all inputs, but (z :: Nat) wasn't used

